Edited wiki page through web user interface.

--- a/wiki/Instructions.wiki
+++ b/wiki/Instructions.wiki
@@ -1,5 +1,3 @@
-#Instructions
-
 = Adding a Finarea/Betamax Service =
 
 In order to add a service, such as sipdiscount.com, you need to manually edit the FinareaMidlet.jad file (open it in a text editor) and add these four lines for each service you want to use:
@@ -9,11 +7,28 @@ In order to add a service, such as sipdiscount.com, you need to manually edit th
  * service-0-account-username: your_username
  * service-0-account-password: your_password 
 
-In the example above sipdiscount is the first service. If you want to add more services, use  *service-1-**, *service-2-**, etc.
+In the example above sipdiscount is the first service. If you want to add more services, use  service-1-, service-2-, etc.
 
-= Details =
+Once you have added the services, you can install the midlet on your phone.
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+= Configuring the Connection and Phone Number =
+
+When you first start the midlet you should go to the settings dialog and configure how you want to connect to the Finarea services and the number to which you want to receive the call (most likely the number of your mobile):
+ 
+ * *Connection*
+  * *direct*: the midlet logs in to the service (e.g. sipdiscount.com) directly ^note 1^
+  * *php scripts*: the midlet uses the php scripts below to initiate a call ^note 2^ 
+ * *php callscript URL* 
+  * URL of the PHP script for initiating a call, e.g. https://example.com/call.php (HTTPS recommended)
+ * *php smsscript URL*
+  * URL of the PHP script for sending sms, e.g. https://example.com/sms.php (HTTPS recommended)
+ * *Callback number*
+  * the number you want to be called back after the call has been initiated
+
+
+^note 1^: this does not require to set up a php script as it uses the service directly. However, it (a) creates more network traffic (multiple HTTPS requests are necessary in order to log in and initiate a call) and (b) it does not work on some nokia handsets (the  reason is that sipdiscount.com et al respond with two Set-Cookie headers of which only the  first one is valid, but my N6630 always picks the second one)
+
+^note 2^: using this setting the midlet calls the [http://www.aldeaglobal.net/callserver/ betamax callserver scripts] instead of using the service directly. It (a) creates much less traffic (only one HTTP request) and (b) is the only solution if the direct connection does not work. I don't recommend to use the scripts located at http://www.aldeaglobal.net/callserver/call.php and http://www.aldeaglobal.net/callserver/sms.php, better set up your own php server with HTTPS enabled in order to not leave traces of your username/password in the various server log files...
+
+
+
